<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobDetails">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editTextTextPersonName15"
            android:layout_width="178dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/title" />

        <EditText
            android:id="@+id/titleInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row1">

        <TextView
            android:id="@+id/editTextTextPersonName16"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/company" />

        <EditText
            android:id="@+id/companyInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row2">

        <TextView
            android:id="@+id/editTextTextPersonName17"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/location" />

        <EditText
            android:id="@+id/cityInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/stateInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row3">

        <TextView
            android:id="@+id/editTextTextPersonName18"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/index" />

        <EditText
            android:id="@+id/indexInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/index"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row4">

        <TextView
            android:id="@+id/editTextTextPersonName19"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/yearly_salary" />

        <EditText
            android:id="@+id/yearlySalaryInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/decimal"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row5">

        <TextView
            android:id="@+id/editTextTextPersonName20"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/yearly_bonus" />

        <EditText
            android:id="@+id/yearlyBonusInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/decimal"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row6">

        <TextView
            android:id="@+id/editTextTextPersonName21"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/retirement_benefits" />

        <EditText
            android:id="@+id/retirementInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/decimal"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row7">

        <TextView
            android:id="@+id/editTextTextPersonName22"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/relocation_stipend" />

        <EditText
            android:id="@+id/relocationInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/decimal"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row8">

        <TextView
            android:id="@+id/editTextTextPersonName23"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/training_development_fund" />

        <EditText
            android:id="@+id/trainingFundInputID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/decimal"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row9">

        <Button
            android:id="@+id/saveJobBtnID"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_marginStart="4dp"
            android:onClick="clickSaveBtn"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/row9" />

        <Button
            android:id="@+id/cancelJobBtnID"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:onClick="clickCancelBtn"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.872"
            app:layout_constraintStart_toEndOf="@+id/saveJobBtnID"
            app:layout_constraintTop_toTopOf="@+id/row9" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>